# continuable

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Findcontinuable.cmake  Incubator.cpp  LICENSE  LICENSE.txt  NextGen.cpp  Readme.md  Test.cpp  annotated.html  appveyor.yml  base.css  changelog.html  classcti_1_1continuable__base.html  classcti_1_1continuable__trait.html  classcti_1_1exceptional__result.html  classcti_1_1promise__base.html  classcti_1_1promisify.html  classcti_1_1result.html  conanfile.py  configuration.html  deprecated.html  files.html  group___base.html  group___connections.html  group___operations.html  group___primitives.html  group___promisify.html  group___result.html  group___testing.html  group___transforms.html  group___traversal.html  group___types.html  incubator.cpp  index.html  (+27 more)
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_and_install.yml
cmake/: CMakeLists.txt  config.cmake.in  configure_compiler.cmake  configure_macros.cmake
cmake/compiler/: clang.cmake  gcc.cmake  msvc.cmake
cmake/macros/: group_sources.cmake
dep/: CMakeLists.txt
dep/asio/: CMakeLists.txt
dep/asio/include/boost/: throw_exception.hpp
dep/benchmark/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/cxx_function/: CMakeLists.txt
dep/function2/: CMakeLists.txt
dep/googletest/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile  Index.md  changelog.dox  configuration.dox  index.dox  installation.dox  tutorial-awaiting-continuables.dox  tutorial-chaining-continuables.dox  tutorial-connecting-continuables.dox  tutorial-creating-continuables.dox  tutorial-promisify-continuables.dox  tutorial-transforming-continuables.dox  tutorial.dox
doc/code/documentation/: CMakeLists.txt  doc-documentation.cpp
doc/code/slideshow/: CMakeLists.txt  doc-slideshow.cpp
doc/doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/asio-banking/: CMakeLists.txt  example-asio-banking.cpp
examples/documentation/: CMakeLists.txt  example-documentation.cpp
examples/example-ai/: .clang-tidy  CMakeLists.txt  example-ai.cpp
examples/example-asio/: CMakeLists.txt  example-asio-integration.cpp  example-asio.cpp
examples/example-boost/: CMakeLists.txt  example-boost.cpp  server.cpp  server.hpp
examples/example-slideshow/: CMakeLists.txt  example-slideshow.cpp
examples/slideshow/: example-slideshow.cpp
fluent/: Callback.h  Continuable.h  WeakCallbackContainer.h  fluent++.cpp  fluent++.hpp  functional_unwrap.hpp
fluent++/: Callback.h  CallbackContainer.h  Continuable.h  WeakCallbackContainer.h  fluent++.hpp  fluent.cpp  fluent.hpp  functional_unwrap.hpp
include/: Callback.h  Continuable.h  WeakCallbackContainer.h  fluent++.cpp  fluent++.hpp  functional_unwrap.hpp
include/continuable/: continuable-api.hpp  continuable-base.hpp  continuable-compositions.hpp  continuable-connections.hpp  continuable-coroutine.hpp  continuable-expected.hpp  continuable-operations.hpp  continuable-primitives.hpp  continuable-promise-base.hpp  continuable-promisify.hpp  continuable-result.hpp  continuable-testing.hpp  continuable-trait.hpp  continuable-transforms.hpp  continuable-traverse-async.hpp  continuable-traverse.hpp  continuable-types.hpp  continuable-work-base.hpp  continuable.hpp
include/continuable/detail/: api.hpp  awaiting.hpp  base.hpp  composition-aggregated.hpp  composition-all.hpp  composition-any.hpp  composition-remapping.hpp  composition-seq.hpp  composition.hpp  composition_all.hpp  composition_any.hpp  composition_remapping.hpp  composition_seq.hpp  connection-aggregated.hpp  expected.hpp  (+22 more)
test/: CMakeLists.txt  test-chaining.cpp  test-unwrap.cpp
test/link/: CMakeLists.txt  test-link.cpp
test/mock/: CMakeLists.txt  test-mock.cpp
test/playground/: CMakeLists.txt  comp.cpp  test-playground.cpp
test/simple-benchmark/: CMakeLists.txt  benchmark-simple.cpp
test/standalone/: CMakeLists.txt  continuable-standalone.cpp
test/threads/: CMakeLists.txt  test-threads.cpp
test/unit-test/: CMakeLists.txt  test-continuable-await.cpp  test-continuable-base-chaining.cpp  test-continuable-base-destruct.cpp  test-continuable-base-errors.cpp  test-continuable-base-futurize.cpp  test-continuable-base-partial.cpp  test-continuable-base.cpp  test-continuable-connection-all.cpp  test-continuable-connection-any.cpp  test-continuable-connection-seq.cpp  test-continuable-connection.cpp  test-continuable-erasure.cpp  test-continuable-expected.cpp  test-continuable-recursion.cpp  test-continuable-regression.cpp  test-continuable-transforms.cpp  test-continuable-traverse-async.cpp  test-continuable-traverse.cpp  test-continuable.cpp  test-continuable.hpp
test/unit-test/async/: test-continuable-async.cpp
test/unit-test/multi/: test-continuable-await.cpp  test-continuable-base-chaining.cpp  test-continuable-base-destruct.cpp  test-continuable-base-errors.cpp  test-continuable-base-executors.cpp  test-continuable-base-multipath.cpp  test-continuable-base-partial.cpp  test-continuable-connection-all-seq-ag-1.cpp  test-continuable-connection-all-seq-ag-2.cpp  test-continuable-connection-all-seq-ag.cpp  test-continuable-connection-all-seq-op.cpp  test-continuable-connection-all-seq.hpp  test-continuable-connection-all.cpp  test-continuable-connection-any.cpp  test-continuable-connection-seq.cpp  test-continuable-erasure.cpp  test-continuable-operations-async.cpp  test-continuable-operations-loop.cpp  test-continuable-operations-split.cpp  test-continuable-regression.cpp  test-continuable-transforms.cpp
test/unit-test/single/: test-continuable-connection-noinst.cpp  test-continuable-erasure.cpp  test-continuable-expected.cpp  test-continuable-flat-variant.cpp  test-continuable-forward-decl.cpp  test-continuable-promise.cpp  test-continuable-promisify.cpp  test-continuable-ready.cpp  test-continuable-result.cpp  test-continuable-traverse-async.cpp  test-continuable-traverse.cpp
tools/: travis-ci.sh
tools/amalgamate/: .gitignore  amalgamate.hpp.prologue  amalgamate.json  amalgamate.sh
(+39 files in other folders)
