if(NOT TARGET function2::function2)
  add_subdirectory(function2)
endif()

if (CTI_CONTINUABLE_WITH_TESTS OR CTI_CONTINUABLE_WITH_BENCHMARKS)
  if(NOT TARGET gtest)
    add_subdirectory(googletest)
  endif()
endif()

if (CTI_CONTINUABLE_WITH_EXAMPLES)
  if(NOT TARGET asio)
    add_subdirectory(asio)
  endif()
endif()

if (CTI_CONTINUABLE_WITH_BENCHMARKS)
  if(NOT TARGET benchmark)
    add_subdirectory(benchmark)
  endif()

  if(NOT TARGET boost)
    add_subdirectory(boost)
  endif()
endif()
